[tool.poetry]
name = "league-mmr-simulation"
version = "0.1.0"
description = "Match making simulation for multiplayer games"
authors = ["ihkap11 <bpakhi97@gmail.com>"]
readme = "README.md"
packages = [{include = "league_mmr_simulation"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"
pyyaml = "^6.0.1"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
websockets = "^12.0"
httpx = "^0.27.0"
streamlit = "^1.33.0"


[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
